--- a/UnicodeString/UnicodeString.vcxproj
+++ b/UnicodeString/UnicodeString.vcxproj
@@ -140,14 +140,14 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EntryPointSymbol>main</EntryPointSymbol>
       <AdditionalDependencies>gdiplus.lib;shlwapi.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <ProgramDatabaseFile>$(IntDir)$(TargetName).pdb</ProgramDatabaseFile>
     </Link>
     <MASM>
       <PreserveIdentifierCase>1</PreserveIdentifierCase>
-      <GeneratePreprocessedSourceListing>
-      </GeneratePreprocessedSourceListing>
+      <GeneratePreprocessedSourceListing>true</GeneratePreprocessedSourceListing>
       <ListAllAvailableInformation>true</ListAllAvailableInformation>
       <DisableSymbolTable>true</DisableSymbolTable>
-      <AssembledCodeListingFile>$(OutDir)$(ProjectName).lst</AssembledCodeListingFile>
+      <AssembledCodeListingFile>$(IntDir)$(ProjectName).lst</AssembledCodeListingFile>
       <ErrorReporting />
       <EnableAssemblyGeneratedCodeListing>
       </EnableAssemblyGeneratedCodeListing>
@@ -170,12 +170,15 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EntryPointSymbol>main</EntryPointSymbol>
       <AdditionalDependencies>gdiplus.lib;shlwapi.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <ProgramDatabaseFile>$(IntDir)$(TargetName).pdb</ProgramDatabaseFile>
     </Link>
     <MASM>
       <GenerateDebugInformation>false</GenerateDebugInformation>
       <PreserveIdentifierCase>1</PreserveIdentifierCase>
-      <AssembledCodeListingFile>$(OutDir)$(ProjectName).lst</AssembledCodeListingFile>
+      <AssembledCodeListingFile>$(IntDir)$(ProjectName).lst</AssembledCodeListingFile>
       <ErrorReporting />
+      <GeneratePreprocessedSourceListing>
+      </GeneratePreprocessedSourceListing>
     </MASM>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
